聊天APP，初步整合完成，支持文字，图片，语音聊天，没有数据库存储

--- a/TestTULING/src/main/res/layout/activity_add.xml
+++ b/TestTULING/src/main/res/layout/activity_add.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="新的朋友"
+            android:text="好友申请"
             android:textSize="20sp"
             android:textColor="#fff"/>
 
